--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 	<p>Test</p>
 	<!-- https://api.coingecko.com/api/v3/coins/usd-coin/market_chart?vs_currency=usd&days=1CG-piYAkfuLU4agtL2vEyUqRiP5 -->
 </body>
-<script type="module" src="./index.js"></script>
+<script type="text/javascript" src="./index.js"></script>
 </html>
