Pool balances and prices

--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
 	<div class="parentDiv"></div>
 </body>
 <script type="text/javascript" src="./prices.js"></script>
-<script type="text/javascript" src="./liquidityPools.js"></script>
+<!-- <script type="text/javascript" src="./liquidityPools.js"></script> -->
 </html>
